# trae-demo-wall

./: .gitignore  README.md  TRAE-Demo-Wall-初赛发帖.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
assets/: DetailView-DrGFh6zr.js  Footer-Df0yUzy9.css  (+4 more)
public/demos/topic_40668/: pyproject.toml  run_mcp_server.py  specs\spec.md  tia_portal_mcp\__init__.py  tia_portal_mcp\_common.py  tia_portal_mcp\_tia_init.py  tia_portal_mcp\block_manager.py  tia_portal_mcp\plc_checker.py  tia_portal_mcp\variable_manager.py
public/demos/topic_40668/specs/: checklist.md
public/demos/topic_40668/tia_portal_mcp/: __main__.py  batch_processor.py  device_manager.py  ladder_generator.py  project_manager.py  server.py
public/demos/topic_43760/: README.md  pyproject.toml
public/demos/topic_43760/client/: package.json  vite.config.ts
public/demos/topic_43760/client/src/: main.tsx
public/demos/topic_43760/client/src/components/ArtifactPanel/: ArtifactPanel.tsx
public/demos/topic_43760/client/src/components/Chat/: Chat.tsx
public/demos/topic_43760/client/src/components/DiffPanel/: DiffPanel.tsx
public/demos/topic_43760/client/src/stores/: agentStore.ts  chatStore.ts  consoleStore.ts  fileStore.ts
public/demos/topic_43760/client/src/types/: index.ts
public/demos/topic_43760/docs/: api.html
public/demos/topic_43760/gateway/: server.py  terminal.py
public/demos/topic_43760/gateway/adapters/: __init__.py  base.py  codex.py
public/demos/topic_43760/gateway/routes/: __init__.py  agent_memory.py  file.py  git.py  system.py  task.py
(+7843 files in other folders)
