[project]
name = "tia-portal-mcp-server"
version = "0.1.0"
description = "MCP Server for TIA Portal Openness automation"
requires-python = ">=3.8"
dependencies = [
    "mcp>=1.0.0",
    "typer>=0.9.0",
    "pythonnet>=3.0.0",
]

[project.scripts]
tia-portal-mcp = "tia_portal_mcp.server:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"