[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-everywhere"
version = "0.1.0"
description = "Agent Everywhere - 让你的 AI Agent 随处可用"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "websockets>=12.0",
    "python-socketio>=5.11.0",
    "paramiko>=3.4.0",
    "pydantic>=2.5.0",
    "pywinpty>=2.0.13;sys_platform=='win32'",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["gateway*"]
